[gd_scene load_steps=2 format=3 uid="uid://ch1hmmdjb6rj7"]

[ext_resource type="Script" path="res://ma_1_nmenu.gd" id="1_8yw1n"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8yw1n")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
layout_mode = 2
anchor_left = 0.223
anchor_top = 0.1
anchor_right = 0.779
anchor_bottom = 0.393
offset_left = 0.104004
offset_top = -0.800003
offset_right = -0.408081
offset_bottom = 0.335999
theme_override_font_sizes/font_size = 75
text = "+1ùëíTD"
horizontal_alignment = 1
vertical_alignment = 1

[node name="startgame" type="Button" parent="."]
layout_mode = 2
offset_left = 569.0
offset_top = 271.0
offset_right = 710.0
offset_bottom = 319.0
text = "Start Game
"

[node name="loadgame" type="Button" parent="."]
layout_mode = 2
offset_left = 569.0
offset_top = 327.0
offset_right = 710.0
offset_bottom = 383.0
text = "Load Game"

[node name="settings" type="Button" parent="."]
layout_mode = 2
offset_left = 569.0
offset_top = 392.0
offset_right = 710.0
offset_bottom = 448.0
text = "Settings"

[node name="quit" type="Button" parent="."]
layout_mode = 2
offset_left = 569.0
offset_top = 457.0
offset_right = 710.0
offset_bottom = 512.0
text = "Quit"

[connection signal="pressed" from="startgame" to="." method="_on_startgame_pressed"]
[connection signal="pressed" from="loadgame" to="." method="_on_loadgame_pressed"]
[connection signal="pressed" from="settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
